[metadata]
name = arduino_exporter
description = Arduino Prometheus Exporter.
author = Clivern
author_email = hello@clivern.com
license = MIT
license_files = LICENSE.txt
long_description = file: README.rst
long_description_content_type = text/x-rst; charset=UTF-8
url = https://github.com/clivern/arduino_exporter/
project_urls =
    Documentation = https://github.com/clivern/arduino_exporter/
    Source = https://github.com/clivern/arduino_exporter/
    Changelog = https://github.com/clivern/arduino_exporter/blob/main/CHANGELOG.rst
    Tracker = https://github.com/clivern/arduino_exporter/issues
    Download = https://pypi.org/project/arduino_exporter/#files

platforms = any

classifiers =
    Development Status :: 5 - Production/Stable
    Programming Language :: Python
    License :: OSI Approved :: MIT License

[options]
zip_safe = False
packages = find_namespace:
include_package_data = True
package_dir =
    =src

install_requires =
    click<=8.1.7
    pyserial<=3.5
    prometheus-client<=0.17.1
    importlib-metadata<=6.8.0; python_version<"3.8"

[options.packages.find]
where = src
exclude =
    tests
    cache
    deploy

testing =
    click
    pyserial
    prometheus-client
    setuptools
    pytest
    pytest-cov

[options.entry_points]
console_scripts =
    arduino_exporter = arduino_exporter.cli:main

[tool:pytest]
addopts =
    --verbose
norecursedirs =
    dist
    build
    .tox
testpaths = tests

[devpi:upload]
no_vcs = 1
formats = bdist_wheel

[flake8]
max_line_length = 88
extend_ignore = E203, W503
exclude =
    .tox
    build
    dist
    .eggs

[pyscaffold]
version = 4.1.1
package = arduino_exporter
